tests/errors/sem.expected-const.struct-fields.or
main :: () -> void {
    T :: struct {
        x := { 5; };
    };

    T.{};
};
